[package]
name = "channel_native"
version = "0.1.0"
authors = ["Ken A. Redergård <64542+kenr@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.62"
libc = "^0.2"
